--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@astrojs/check": "^0.3.0",
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/vue": "^3.0.2",
+    "@vueuse/motion": "^2.0.0",
     "astro": "^3.4.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2",
     "vue": "^3.2.30"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6"
   }
 }
