--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^3.4.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2",
+    "vanilla-tilt": "^1.8.1",
     "vue": "^3.2.30"
   },
   "devDependencies": {
