--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "serve dist -s -n -L -p $PORT",
+    "start": "npx serve dist -s -n -L -p $PORT",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
